[tool.poetry]
name = "simple-racing-arcade"
version = "0.1.0"
description = ""
authors = ["Marcel Parciak <marcel.parciak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_racing_arcade"}]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.17"


[tool.poetry.group.development.dependencies]
pynvim = "^0.4.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
